--- a/src/main/resources/theme-resources/messages/messages_en.properties
+++ b/src/main/resources/theme-resources/messages/messages_en.properties
@@ -4,7 +4,7 @@ emailTOTPBodyHtml=Your temporary login code is: <br/> <h2>{1}</h2></div> <br/> T
 emailTOTPFormTitle=Temporary Login Code
 emailTOTPFormLabel=Code
 resendEmail=Resend email
-emailTOTPFormInstruction=Enter the code we sent to your email address.
+emailTOTPFormInstruction=Enter the code we sent to you.
 
 emailTOTPCodeExpired=The code has expired.
 emailTOTPCodeInvalid=Invalid code, try again. {0} tries left.
