--- a/src/main/resources/theme-resources/messages/messages_en.properties
+++ b/src/main/resources/theme-resources/messages/messages_en.properties
@@ -5,6 +5,7 @@ emailTOTPFormTitle=Temporary Login Code
 emailTOTPFormLabel=Code
 resendEmail=Resend email
 emailTOTPFormInstruction=Enter the code we sent to you.
+simulationModeHint=Test mode ON. This is your code: {0}
 
 emailTOTPCodeExpired=The code has expired.
 emailTOTPCodeInvalid=Invalid code, try again. {0} tries left.
