--- a/src/main/resources/theme-resources/messages/messages_hu.properties
+++ b/src/main/resources/theme-resources/messages/messages_hu.properties
@@ -5,6 +5,7 @@ emailTOTPFormTitle=Ellenőrző kód
 emailTOTPFormLabel=Kód
 resendEmail=Resend email
 emailTOTPFormInstruction=Kérjük add meg az ellenőrző kódot.
+simulationModeHint=Teszt mód bekapcsolva. Ez a kódod: {0}
 
 emailTOTPCodeExpired=A kód lejárt.
 emailTOTPCodeInvalid=A megadott kód hibás. Még {0} próbálkozásod van.
