--- a/src/main/resources/theme-resources/messages/messages_en.properties
+++ b/src/main/resources/theme-resources/messages/messages_en.properties
@@ -1,5 +1,6 @@
 emailTOTPBody=Your temporary login code is {1}s and is valid for {2} minutes.
 emailTOTPBodyHtml=Your temporary login code is: <br/> <h2>{1}</h2></div> <br/> This code is valid for {2} minutes.
+SMSTOTPBody=Fundamenta OTP: {1}
 
 emailTOTPFormTitle=Temporary Login Code
 emailTOTPFormLabel=Code
