--- a/src/main/resources/theme-resources/messages/messages_hu.properties
+++ b/src/main/resources/theme-resources/messages/messages_hu.properties
@@ -1,5 +1,6 @@
 emailTOTPBody=Az ellenőrző kódod {1}s és {2} percig érvényes.
 emailTOTPBodyHtml=Az ellenőrző kódod: <br/> <h2>{1}</h2></div> <br/> Ez a kód {2} percig érvényes.
+SMSTOTPBody=Fundamenta kod: {1}
 
 emailTOTPFormTitle=Ellenőrző kód
 emailTOTPFormLabel=Kód
